[server] add namespacing to AlertTemplate